src/page/error/example/sample/error-default.ejs
<%- include('../../template/ejs/error.ejs'); %>
